syntax = "proto3";

package executors.v1.plan.v1.activities.v1;

import "executors/v1/plan/v1/metadata.proto";
import "executors/v1/plan/v1/org_metadata.proto";
import "executors/v1/plan/v1/plan_type.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/executors/v1/plan/v1/activities/v1";

message CreateRunnerPlan {
  .executors.v1.plan.v1.PlanType type = 1;
  .executors.v1.plan.v1.Metadata metadata = 2;
  .executors.v1.plan.v1.OrgMetadata org_metadata = 3;
}
